--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Extended links to stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="./styles/4-filters.css">
-
-    <!-- Shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB clone</title>
-</head>
-
-<body>
-    <header>
-        <a href="" class="logo"></a>
+		<link rel="stylesheet" href="./styles/4-common.css">
+		<link rel="stylesheet" href="./styles/3-footer.css">
+		<link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="stylesheet" href="./styles/4-filters.css">
+    <link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header>
     </header>
-
     <div class="container">
-        <section class="filters">
-            <button>Search</button>
-        </section>
+      <section class="filters">
+        <button>Search</button>
+      </section>
     </div>
-
-    <footer>
-        <p>Holberton school</p>
-    </footer>
-
-
-</body>
-
+		<footer>
+			<p>Best School</p>
+		</footer>
+	</body>
 </html>
