--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="UTF-8">
     <title>AirBnB clone</title>
-		<link rel="stylesheet" href="./styles/2-common.css">
-		<link rel="stylesheet" href="./styles/2-footer.css">
-		<link rel="stylesheet" href="./styles/2-header.css">
-	</head>
-	<body>
-		<header></header>
-		<footer>
-			<p>Best School</p>
-		</footer>
-	</body>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+</head>
+<body>
+<header>
+</header>
+<footer>
+    Best School
+</footer>
+</body>
 </html>
