--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,107 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="UTF-8">
     <title>AirBnB clone</title>
-		<link rel="stylesheet" href="./styles/4-common.css">
-		<link rel="stylesheet" href="./styles/3-footer.css">
-		<link rel="stylesheet" href="./styles/3-header.css">
-    <link rel="stylesheet" href="./styles/6-filters.css">
-    <link rel="stylesheet" href="./styles/8-places.css">
-    <link rel="icon" href="images/icon.png">
-	</head>
-	<body>
-		<header></header>
-    <div class="page-container">
-      <div class="container">
+    <link rel="icon" href="images/icon.png"/>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/6-filters.css"/>
+    <link rel="stylesheet" href="styles/8-places.css"/>
+</head>
+<body>
+    <header>
+        <div class="logo"></div>
+    </header>
+    <div class="container">
         <section class="filters">
-          <div class="locations">
-            <h3>States</h3>
-            <h4>California, Arizona...</h4>
-            <div class="popover">
-              <ul>
-                <li><h2>Arizona</h2>
-                  <ul>
-                    <li>Phoenix</li>
-                    <li>Tuscon</li>
-                  </ul>
-                </li>
-                <li><h2>California</h2>
-                  <ul>
-                    <li>San Fransisco</li>
-                    <li>Los Altos</li>
-                  </ul>
-                </li>
-              </ul>
+            <div class="location">
+                <h3>States</h3>
+                <h4>California, Arizona...</h4>
+                <ul class="popover">
+                    <li>
+                        <h2>
+                            Arizona
+                        </h2>
+                        <ul>
+                            <li>
+                                Phoenix
+                            </li>
+                            <li>
+                                Tucson
+                            </li>
+                        </ul>
+
+                    <li>
+                        <h2>
+                            California
+                        </h2>
+                        <ul>
+                            <li>
+                                San Francisco
+                            </li>
+                            <li>
+                                Los Altos
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-          </div>
-          <div class="amenities">
-            <h3>Amenities</h3>
-            <h4>Internet, Kitchen...</h4>
-            <div class="popover">
-              <ul>
-                <li>Internet</li>
-                <li>TV</li>
-                <li>Kitchen</li>
-                <li>Games</li>
-              </ul>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen...</h4>
+                <ul class="popover">
+                    <li>
+                        Internet
+                    </li>
+                    <li>
+                        TV
+                    </li>
+                    <li>
+                        Kitchen
+                    </li>
+                    <li>
+                        Iron
+                    </li>
+                </ul>
             </div>
-          </div>
-          <button>Search</button>
+            <button>Search</button>
         </section>
         <section class="places">
-          <h1>Places</h1>
-          <article>
-            <h2>My home</h2>
-            <div class="price_by_night"><p>$299</p></div>
-            <div class="information">
-              <div class="max_guest"><span>6 Guests</span></div>
-              <div class="number_rooms"><span>3 Bedrooms</span></div>
-              <div class="number_bathrooms"><span>2 Bathrooms</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Jenny Astin
-            </div>
-            <div class="description">
-              This is a lovely 3 bedroom 2 bathroom home that can accomodate 6 people. It locates at the center of Downtown Las Altos and next to subway line 1, 1 stop to downtown, 2 stops to the party zone, 3 stops to the crazy ally.
-            </div>
-          </article>
-          <article>
-            <h2>Tiny house</h2>
-            <div class="price_by_night"><p>$179</p></div>
-            <div class="information">
-              <div class="max_guest"><span>2 Guests</span></div>
-              <div class="number_rooms"><span>1 Bedroom</span></div>
-              <div class="number_bathrooms"><span>1 Bathroom</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Tomme Brady
-            </div>
-            <div class="description">
-              This is a lovely 1 bedroom 1 bathroom aparment that can accomodate 2 people. It locates at the center of Downtown San Francisco and next to Muni lines N & J to accomodate traveling around the city with ease.
-            </div>
-          </article>
-          <article>
-            <h2>A suite</h2>
-            <div class="price_by_night"><p>$149</p></div>
-            <div class="information">
-              <div class="max_guest"><span>2 Guests</span></div>
-              <div class="number_rooms"><span>1 Bedroom</span></div>
-              <div class="number_bathrooms"><span>1 Bathroom</span></div>
-            </div>
-            <div class="user">
-              <b>Owner</b>: Renne Abstract
-            </div>
-            <div class="description">
-              This is a lovely 1 bedroom 1 bathroom suite that can accomodate 2 people. It locates at the center of Downtown San Francisco and next to Muni lines L & K to accomodate traveling around the city with ease.
-            </div>
-          </article>
+            <h1>Places</h1>
+                <article>
+                    <h2>
+                        Home
+                    </h2>
+                    <div class="price_by_night">
+                        $80
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            2 Guest
+                        </div>
+                        <div class="number_rooms">
+                            3 Rooms
+                        </div>
+                        <div class="number_bathrooms">
+                            2 Bathrooms
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><span>Owner:</span> William Wallace</p>
+                    </div>
+                    <div class="description">
+                        2 guests · Studio · 1 bed · 1 private bath
+                        Superhosts are experienced, highly rated hosts who are committed to providing great stays for guests.
+                        Great location
+                        90% of recent guests gave the location a 5-star rating.
+                        Great check-in experience
+                        95% of recent guests gave the check-in process a 5-star rating.
+                    </div>
+                </article>
+                <article>
+                    <h2>
+                        Tiny House
+                    </h2>
+                    <div class="price_by_night">
+                        $20
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            2 Guest
+                        </div>
+                        <div class="number_rooms">
+                            3 Rooms
+                        </div>
+                        <div class="number_bathrooms">
+                            2 Bathrooms
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><span>Owner:</span> William Wallace</p>
+                    </div>
+                    <div class="description">
+                        2 guests · Studio · 1 bed · 1 private bath
+                        Superhosts are experienced, highly rated hosts who are committed to providing great stays for guests.
+                        Great location
+                        90% of recent guests gave the location a 5-star rating.
+                        Great check-in experience
+                        95% of recent guests gave the check-in process a 5-star rating.
+                    </div>
+                </article>
+                <article>
+                    <h2>
+                        A suite
+                    </h2>
+                    <div class="price_by_night">
+                        $10
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            2 Guest
+                        </div>
+                        <div class="number_rooms">
+                            3 Rooms
+                        </div>
+                        <div class="number_bathrooms">
+                            2 Bathrooms
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><span>Owner:</span> William Wallace</p>
+                    </div>
+                    <div class="description">
+                        2 guests · Studio · 1 bed · 1 private bath
+                        Superhosts are experienced, highly rated hosts who are committed to providing great stays for guests.
+                        Great location
+                        90% of recent guests gave the location a 5-star rating.
+                        Great check-in experience
+                        95% of recent guests gave the check-in process a 5-star rating.
+                    </div>
+                </article>
         </section>
-      </div>
-      <footer>
-        <p>Best School</p>
-      </footer>
     </div>
-	</body>
+    <footer>
+        Best School
+    </footer>
+</body>
 </html>
