--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB clone</title>
-    <link rel="icon" href="images/icon.png"/>
-    <link rel="stylesheet" href="styles/3-common.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-</head>
-<body>
-<header>
-    <div class="header-img"></div>
-   <!-- <img src="images/logo.png" alt="logo Best">-->
-</header>
-<footer>
-    Best School
-</footer>
-</body>
+		<link rel="stylesheet" href="./styles/3-common.css">
+		<link rel="stylesheet" href="./styles/3-footer.css">
+		<link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header>
+    </header>
+		<footer>
+			<p>Best School</p>
+		</footer>
+	</body>
 </html>
