--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -1,249 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>
-      AirBNB Clone
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3.0, minimum-scale=0.86">
-    <link rel="stylesheet" href="styles/4-common.css" />
-    <link rel="stylesheet" href="styles/3-header.css" />
-    <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="stylesheet" href="styles/100-places.css" />
-    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-  </head>
-
-  <body>
-    <header></header>
-    <div class="container">
-      <section class="filters">
-        <div class="locations">
-          <h3>States</h3>
-          <h4>Addis Ababa,Hawassa...</h4>
-          <ul class="popover">
-            <li>
-              <h2>Addis Ababa</h2>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB clone</title>
+		<link rel="stylesheet" href="./styles/4-common.css">
+		<link rel="stylesheet" href="./styles/3-footer.css">
+		<link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="stylesheet" href="./styles/6-filters.css">
+    <link rel="stylesheet" href="./styles/100-places.css">
+    <link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header></header>
+    <div class="page-container">
+      <div class="container">
+        <section class="filters">
+          <div class="locations">
+            <h3>States</h3>
+            <h4>California, Arizona...</h4>
+            <div class="popover">
               <ul>
-                <li>6 killo</li>
-                <li>kality</li>
-                <li>piyassa</li>
+                <li><h2>Arizona</h2>
+                  <ul>
+                    <li>Phoenix</li>
+                    <li>Tuscon</li>
+                  </ul>
+                </li>
+                <li><h2>California</h2>
+                  <ul>
+                    <li>San Fransisco</li>
+                    <li>Los Altos</li>
+                  </ul>
+                </li>
               </ul>
-            </li>
-            <li>
-              <h2>Hawassa</h2>
+            </div>
+          </div>
+          <div class="amenities">
+            <h3>Amenities</h3>
+            <h4>Internet, Kitchen...</h4>
+            <div class="popover">
               <ul>
-                <li>Atote</li>
-                <li>shell</li>
-                <li>Adisu Menahariya</li>
+                <li>Internet</li>
+                <li>TV</li>
+                <li>Kitchen</li>
+                <li>Games</li>
               </ul>
-            </li>
-          </ul>
-        </div>
-        <div class="amenities">
-          <h3>Amenities</h3>
-          <h4>Internet,Tv,Kitchen...</h4>
-          <ul class="popover">
-            <li>Internet</li>
-            <li>Tv</li>
-            <li>Kitchen</li>
-            <li>Iron</li>
-          </ul>
-        </div>
-        <button>
-          Search
-        </button>
-      </section>
-      <section class="places">
-        <h1>Places</h1>
-        <div class="boxes">
+            </div>
+          </div>
+          <button>Search</button>
+        </section>
+        <section class="places">
+          <h1>Places</h1>
           <article>
-            <h2>Home</h2>
-            <div class="price_by_night">
-              $80
-            </div>
+            <h2>My home</h2>
+            <div class="price_by_night"><p>$299</p></div>
             <div class="information">
-              <div class="max_guest">
-                <div class="img1"></div>
-                <p>2 Guests</p>
-              </div>
-              <div class="number_rooms">
-                <div class="img2"></div>
-                <p>1 Bedroom</p>
-              </div>
-              <div class="number_bathrooms">
-                <div class="img3"></div>
-                <p>1 Bedroom</p>
-              </div>
+              <div class="max_guest"><span>6 Guests</span></div>
+              <div class="number_rooms"><span>3 Bedrooms</span></div>
+              <div class="number_bathrooms"><span>2 Bathrooms</span></div>
             </div>
-            <div class="user"><strong>Owner:</strong> Juanito</div>
+            <div class="user">
+              <b>Owner</b>: Cristiano Ronaldo
+            </div>
             <div class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-              reprehenderit reiciendis consequatur, accusamus quia accusantium
-              sequi tempore velit expedita impedit minima ea nemo perferendis
-              et, repellat cumque nulla quo optio.
-            </div>
+              Choose between having breakfast sitting by the natural wood breakfast bar, or up on the rooftop deck, enjoying the sunshine. This classy loft boasts open-plan living, with exposed brickwork and stunning artwork. An ideal base to explore Chicago.            </div>
             <div class="amenities">
               <h2>Amenities</h2>
               <ul>
-                <li><i class="fa fa-tv"></i> TV</li>
-                <li><i class="fa fa-wifi"></i> Wifi</li>
-                <li><i class="fa fa-paw"></i> Pets friendly</li>
+                <li class="tv_">TV</li>
+                <li class="wifi_">Wifi</li>
+                <li class="pets_">Pets friendly</li>
               </ul>
             </div>
             <div class="reviews">
               <h2>2 Reviews</h2>
               <ul>
                 <li>
-                  <h3>From Bob Dylan the 27th January 2017</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusantium commodi cupiditate blanditiis repellat
-                    voluptatibus dicta quaerat eligendi nesciunt harum, quia hic
-                    doloremque neque maxime ratione ab architecto odit, tempora
-                    quos.
-                  </p>
+                  <h3>From Shane McCutcheon the 27th January 2017</h3>
+                  <p>Runshi is an epic host. Nothing more I can say. 5 star!</p>
                 </li>
                 <li>
-                  <h3>From Freddie Mercury the 31th october 1987</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil voluptatibus inventore sed cupiditate est minima quia
-                    et fuga sint rerum commodi ea aut quis consequuntur, ab
-                    numquam maxime hic omnis?
-                  </p>
+                  <h3>From Randolph Bell the 4th January 2017</h3>
+                  <p>Very clean place considering I'm a surgeon and a clean OR is a must!</p>
                 </li>
               </ul>
             </div>
           </article>
           <article>
-            <h2>Tiny House</h2>
-            <div class="price_by_night">
-              $65
-            </div>
+            <h2>Tiny house</h2>
+            <div class="price_by_night"><p>$179</p></div>
             <div class="information">
-              <div class="max_guest">
-                <div class="img1"></div>
-                <p>2 Guests</p>
-              </div>
-              <div class="number_rooms">
-                <div class="img2"></div>
-                <p>1 Bedroom</p>
-              </div>
-              <div class="number_bathrooms">
-                <div class="img3"></div>
-                <p>1 Bedroom</p>
-              </div>
+              <div class="max_guest"><span>2 Guests</span></div>
+              <div class="number_rooms"><span>1 Bedroom</span></div>
+              <div class="number_bathrooms"><span>1 Bathroom</span></div>
             </div>
-            <div class="user"><strong>Owner:</strong> Jeniffer</div>
+            <div class="user">
+              <b>Owner</b>: Sutton Brady
+            </div>
             <div class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              laudantium possimus, ad nihil minima sapiente veniam doloribus
-              distinctio quod aliquid officiis animi expedita vero! Omnis
-              doloremque sunt reiciendis voluptates ipsum!
-            </div>
+              Admire the view of St. Peter’s from the sunlit patio of this elegant studio apartment. The home boasts a crisp, contemporary feel while still feeling comfortable and inviting. Enjoy a convenient kitchenette, breakfast nook, and soothing soaking tub.            </div>
             <div class="amenities">
               <h2>Amenities</h2>
               <ul>
-                <li><i class="fa fa-tv"></i> TV</li>
-                <li><i class="fa fa-wifi"></i> Wifi</li>
-                <li><i class="fa fa-paw"></i> Pets friendly</li>
+                <li class="tv_">TV</li>
+                <li class="wifi_">Wifi</li>
+                <li class="pets_">Pets friendly</li>
               </ul>
             </div>
             <div class="reviews">
               <h2>2 Reviews</h2>
               <ul>
                 <li>
-                  <h3>From Bob Dylan the 27th January 2017</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusantium commodi cupiditate blanditiis repellat
-                    voluptatibus dicta quaerat eligendi nesciunt harum, quia hic
-                    doloremque neque maxime ratione ab architecto odit, tempora
-                    quos.
-                  </p>
+                  <h3>From Mr. Walsh the 27th January 2017</h3>
+                  <p>Excellent! Nothing more I can say. 5 star!</p>
                 </li>
                 <li>
-                  <h3>From Freddie Mercury the 31th october 1987</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil voluptatibus inventore sed cupiditate est minima quia
-                    et fuga sint rerum commodi ea aut quis consequuntur, ab
-                    numquam maxime hic omnis?
-                  </p>
+                  <h3>From AJ Austin the 4th January 2017</h3>
+                  <p>Highly recommended!</p>
                 </li>
               </ul>
             </div>
           </article>
           <article>
-            <h2>A Suite</h2>
-            <div class="price_by_night">
-              $180
-            </div>
+            <h2>A suite</h2>
+            <div class="price_by_night"><p>$149</p></div>
             <div class="information">
-              <div class="max_guest">
-                <div class="img1"></div>
-                <p>2 Guests</p>
-              </div>
-              <div class="number_rooms">
-                <div class="img2"></div>
-                <p>1 Bedroom</p>
-              </div>
-              <div class="number_bathrooms">
-                <div class="img3"></div>
-                <p>1 Bedroom</p>
-              </div>
+              <div class="max_guest"><span>2 Guests</span></div>
+              <div class="number_rooms"><span>1 Bedroom</span></div>
+              <div class="number_bathrooms"><span>1 Bathroom</span></div>
             </div>
-            <div class="user"><strong>Owner:</strong> Pepe</div>
+            <div class="user">
+              <b>Owner</b>: Richard Hunter
+            </div>
             <div class="description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-              tenetur nihil corporis? A corrupti amet possimus obcaecati
-              veritatis commodi atque impedit libero, minus quos vitae itaque
-              corporis nisi non nulla!
-            </div>
+              Enjoy the elegance of a by-gone era while staying in this Art Deco home. Beautifully decorated and featuring a sweeping staircase, original stained-glass windows, period furniture, and a stunningly unique black-and-white tiled bathroom.            </div>
             <div class="amenities">
-              <h2>Amenities</h2>
-              <ul>
-                <li><i class="fa fa-tv"></i> TV</li>
-                <li><i class="fa fa-wifi"></i> Wifi</li>
-                <li><i class="fa fa-paw"></i> Pets friendly</li>
-              </ul>
-            </div>
-            <div class="reviews">
-              <h2>2 Reviews</h2>
-              <ul>
-                <li>
-                  <h3>From Bob Dylan the 27th January 2017</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusantium commodi cupiditate blanditiis repellat
-                    voluptatibus dicta quaerat eligendi nesciunt harum, quia hic
-                    doloremque neque maxime ratione ab architecto odit, tempora
-                    quos.
-                  </p>
-                </li>
-                <li>
-                  <h3>From Freddie Mercury the 31th october 1987</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil voluptatibus inventore sed cupiditate est minima quia
-                    et fuga sint rerum commodi ea aut quis consequuntur, ab
-                    numquam maxime hic omnis?
-                  </p>
-                </li>
-              </ul>
-            </div>
+            <h2>Amenities</h2>
+            <ul>
+              <li class="tv_">TV</li>
+              <li class="pets_">Pets friendly</li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>3 Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Alice Pieszecki the 20th January 2017</h3>
+                <p>I had an awesome experience!</p>
+              </li>
+              <li>
+                <h3>From Dr. Voss the 10th February 2017</h3>
+                <p>Why not!?</p>
+              </li>
+              <li>
+                <h3>From Barrette Cain the 21th May 2017</h3>
+                <p>Very clean place!</p>
+              </li>
+            </ul>
+          </div>
           </article>
-        </div>
-      </section>
+        </section>
+      </div>
+      <footer>
+        <p>Best School</p>
+      </footer>
     </div>
-    <footer>
-      Best School
-    </footer>
-  </body>
+	</body>
 </html>
