--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB clone</title>
-    <link rel="icon" href="images/icon.png"/>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/4-filters.css"/>
-</head>
-<body>
-
-    <header>
-        <div class="logo"></div>
+		<link rel="stylesheet" href="./styles/4-common.css">
+		<link rel="stylesheet" href="./styles/3-footer.css">
+		<link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="stylesheet" href="./styles/4-filters.css">
+    <link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header>
     </header>
     <div class="container">
-        <section class="filters">
-            <button>Search</button>
-        </section>
+      <section class="filters">
+        <button>Search</button>
+      </section>
     </div>
-    <footer>
-        Best School
-    </footer>
-
-</body>
+		<footer>
+			<p>Best School</p>
+		</footer>
+	</body>
 </html>
