--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,74 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>
-      AirBNB Clone
-    </title>
-    <link rel="stylesheet" href="styles/4-common.css" />
-    <link rel="stylesheet" href="styles/3-header.css" />
-    <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="stylesheet" href="styles/7-places.css" />
-    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon" />
-  </head>
-
-  <body>
-    <header></header>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB clone</title>
+		<link rel="stylesheet" href="./styles/4-common.css">
+		<link rel="stylesheet" href="./styles/3-footer.css">
+		<link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="stylesheet" href="./styles/6-filters.css">
+    <link rel="stylesheet" href="./styles/7-places.css">
+    <link rel="icon" href="images/icon.png">
+	</head>
+	<body>
+		<header></header>
     <div class="container">
-        <section class="filters">
-            <div class="locations">
-              <h3>States</h3>
-              <h4>Addis Ababa,Hawassa...</h4>
-              <ul class="popover">
-                <li>
-                  <h2>Addis Ababa</h2>
-                  <ul>
-                    <li>6 killo</li>
-                    <li>kality</li>
-                    <li>piyassa</li>
-                  </ul>
-                </li>
-                <li>
-                  <h2>Hawassa</h2>
-                  <ul>
-                    <li>Atote</li>
-                    <li>shell</li>
-                    <li>Adisu Menahariya</li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            <div class="amenities">
-              <h3>Amenities</h3>
-              <h4>Internet,Tv,Kitchen...</h4>
-              <ul class="popover">
-                <li>Internet</li>
-                <li>Tv</li>
-                <li>Kitchen</li>
-                <li>Iron</li>
-              </ul>
-            </div>
-            <button>
-              Search
-            </button>
-          </section>
-      <section class="places">
-        <h1>
-          Places
-        </h1>
-        <article>
-          <h2>Home</h2>
-        </article>
-        <article>
-          <h2>Tiny House</h2>
-        </article>
-        <article>
-          <h2>A Suite</h2>
-        </article>
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>California, Arizona...</h4>
+          <div class="popover">
+            <ul>
+              <li><h2>Arizona</h2>
+                <ul>
+                  <li>Phoenix</li>
+                  <li>Tuscon</li>
+                </ul>
+              </li>
+              <li><h2>California</h2>
+                <ul>
+                  <li>San Fransisco</li>
+                  <li>Los Altos</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Internet, Kitchen...</h4>
+          <div class="popover">
+            <ul>
+              <li>Internet</li>
+              <li>TV</li>
+              <li>Kitchen</li>
+              <li>Games</li>
+            </ul>
+          </div>
+        </div>
+        <button>Search</button>
       </section>
+      <section class="places">
+				<h1>Places</h1>
+				<article>
+					<h2>My home</h2>
+				</article>
+				<article>
+					<h2>Tiny house</h2>
+				</article>
+				<article>
+					<h2>A suite</h2>
+				</article>
+			</section>
     </div>
-    <footer>
-      Best School
-    </footer>
-  </body>
+		<footer>
+			<p>Best School</p>
+		</footer>
+	</body>
 </html>
